Prevent the ProgressBar from getting too small

--- a/src/components/ProgressionStatus/ProgressionStatus.scss
+++ b/src/components/ProgressionStatus/ProgressionStatus.scss
@@ -26,6 +26,8 @@
   position: relative; // Only for the incomplete-text
 
   width: 100%;
+  min-height: 1.5rem;
+
   background-color: $primary-color-2;
 
   border-radius: 8px;
